--- a/inventarios/inventarios/staticfiles/templates/html/app/add-fincas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-fincas.html
@@ -16,9 +16,9 @@
                         <div class="form-group">
                             <label for="nombre_finca">Nombre de Finca *</label>
                             {% if fincas_id %}
-                            <input type="text" class="form-control" placeholder="Ingrese Número de Factura" required id="nombre_finca" name="nombre_finca" value="{{finca.nombre_finca}}" >
+                            <input type="text" class="form-control" placeholder="Ingrese Nombre de Finca" required id="nombre_finca" name="nombre_finca" value="{{finca.nombre_finca}}" >
                             {% else %}
-                            <input type="text" class="form-control" placeholder="Ingrese Número de Factura" required id="nombre_finca" name="nombre_finca">
+                            <input type="text" class="form-control" placeholder="Ingrese Nombre de Finca" required id="nombre_finca" name="nombre_finca">
                             {% endif %}
                         </div>
                     </div>
@@ -109,6 +109,12 @@
         {% endif %}
         var url = isEditMode ? `/user/finca/retrieve/${fincas_id}/` : '/user/finca/list-create/';
         var httpMethod = isEditMode ? 'PUT' : 'POST';
+
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
 
         fetch(url, {
             method: httpMethod,
