--- a/inventarios/inventarios/staticfiles/templates/html/app/add-grupos.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-grupos.html
@@ -142,6 +142,12 @@
         var url = isEditMode ? `/insumos/grupos/retrieve/${grupo_id}/` : '/insumos/grupos/list-create/';
         var httpMethod = isEditMode ? 'PUT' : 'POST';
 
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
         fetch(url, {
             method: httpMethod,
             headers: {
