--- a/inventarios/inventarios/staticfiles/templates/html/app/list-insumos.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-insumos.html
@@ -97,11 +97,17 @@
 
 <script>
     {% if user.is_authenticated %}
-    //const accessToken = accessToken;
-    const accessToken ="{{token}}"
-    {% endif %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
     
     document.addEventListener("DOMContentLoaded", function() {
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
         // URL de tu API
         fetch('/insumos/list-create/', {
             headers: {
