--- a/inventarios/inventarios/staticfiles/templates/html/app/list-unidad.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-unidad.html
@@ -81,6 +81,11 @@
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
         fetch('/insumos/unidades-medida/list-create/', {
             headers: {
                 'Authorization': `Bearer ${accessToken}`
@@ -120,6 +125,11 @@
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
 
         // Event listener para editar Ingrediente Activo
         document.body.addEventListener('click', function (event) {
