--- a/inventarios/inventarios/staticfiles/templates/html/app/add-bodegas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-bodegas.html
@@ -14,7 +14,7 @@
                 <div class="row"> 
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label for="nombre_finca">Nombre de Finca *</label>
+                            <label for="nombre_finca">Nombre de Bodega *</label>
                             {% if bodegas_id %}
                             <input type="text" class="form-control" placeholder="Ingrese Número de la Bodega" required id="nombre_bodega" name="nombre_bodega" value="{{bodega_edit.nombre_bodega}}">
                             {% else %}
@@ -215,6 +215,12 @@
     {% endif %}
     var url = isEditMode ? `/user/bodegas/retrieve/${bodegas_id}/` : '/user/bodegas/list-create/';
     var httpMethod = isEditMode ? 'PUT' : 'POST';
+
+    {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
 
     fetch(url, {
         method: httpMethod,
