--- a/inventarios/inventarios/staticfiles/templates/html/app/auth-sign-in.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/auth-sign-in.html
@@ -85,7 +85,7 @@
     <script src="{% static '/assets/js/appdfront.js' %}"></script>
   </body>
 
-<!-- <script>
+ <script>
    document.getElementById('login-form').addEventListener('submit', function (event) {
       event.preventDefault(); // Evitar el envío tradicional del formulario
 
@@ -124,6 +124,6 @@
             messageDiv.textContent = 'Ocurrió un error al intentar iniciar sesión.';
          });
    });
-</script> -->
+</script> 
 
 </html>
