--- a/inventarios/inventarios/staticfiles/templates/html/app/list-ingrediente.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-ingrediente.html
@@ -71,6 +71,11 @@
 </div>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
         fetch('/insumos/ingredientes-activos/list-create/', {
             headers: {
                 'Authorization': `Bearer ${accessToken}`
