--- a/inventarios/inventarios/staticfiles/templates/html/app/list-lotes.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-lotes.html
@@ -132,6 +132,11 @@
 
 <script>
     function deleteUser(bodegas_id, row) {
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
         fetch(`/user/lotes/retrieve/${bodegas_id}`, {
             method: 'DELETE',
             headers: {
