--- a/inventarios/inventarios/staticfiles/templates/html/app/list-proveedor.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-proveedor.html
@@ -73,10 +73,10 @@
 
 <script>
     {% if user.is_authenticated %}
-    //const accessToken = accessToken;
-    const accessToken ="{{token}}"
-    {% endif %}
-
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
     fetch('/proveedores/list-create/', {
         headers: {
             'Authorization': `Bearer ${accessToken}`
@@ -197,6 +197,11 @@
 
 <script>
     function deleteUser(userId, row) {
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
         fetch(`/proveedores/retrieve/${userId}`, {
             method: 'DELETE',
             headers: {
