--- a/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
@@ -136,6 +136,11 @@
 
 <script>
     function deleteUser(userId, row) {
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
         
         fetch(`/salidas/retrieve/${userId}`, {
             method: 'DELETE',
