--- a/inventarios/inventarios/staticfiles/templates/html/app/list-usuarios.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-usuarios.html
@@ -62,9 +62,12 @@
 
 <script>
     {% if user.is_authenticated %}
-    //const accessToken = accessToken;
-    const accessToken ="{{token}}"
-    {% endif %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
+
 
     fetch('/user/info/all/', {
         headers: {
