--- a/inventarios/staticfiles/templates/html/app/auth-sign-in.html
+++ b/inventarios/staticfiles/templates/html/app/auth-sign-in.html
@@ -59,7 +59,7 @@
                               </div>
                            </div>
                            <div class="col-lg-5 content-right">
-                              <img src="{% static '/assets/images/login/01.png' %}" class="img-fluid image-right" alt="">
+                              <img src="{% static '/assets/images/login/CRECETO-login.jpg' %}" class="img-fluid image-right" alt="">
                            </div>
                         </div>
                      </div>
