--- a/inventarios/staticfiles/templates/html/app/add-salidas.html
+++ b/inventarios/staticfiles/templates/html/app/add-salidas.html
@@ -21,7 +21,7 @@
                         <div class="form-group">
                             <label for="fecha_vencimiento">Fecha de Salida *</label>
                             {% if salidas_id %}
-                            <input type="date" class="form-control" placeholder="Ingrese la fecha de vencimiento" required id="fecha_salida" name="fecha_salida" value="{{ fecha_salida.fecha_ingreso|date:'j \d\e F \d\e Y' }}">
+                            <input type="date" class="form-control" placeholder="Ingrese la fecha de vencimiento" required id="fecha_salida" name="fecha_salida" value="{{ fecha_salida.fecha_ingreso|date:'Y-m-d' }}">
                             {% else %}
                             <input type="date" class="form-control" placeholder="Ingrese la fecha de vencimiento" required id="fecha_salida" name="fecha_salida">
                             {% endif %}
