--- a/inventarios/staticfiles/templates/html/app/list-grupos.html
+++ b/inventarios/staticfiles/templates/html/app/list-grupos.html
@@ -190,6 +190,11 @@
 
 </script>
 <script>
+    {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
     function deleteUser(userId, row) {
         fetch(`/insumos/grupos/retrieve/${userId}`, {method: 'DELETE',headers: {'Authorization': `Bearer ${accessToken}`}})
             .then(data => {
