--- a/inventarios/staticfiles/templates/html/app/list-lotes.html
+++ b/inventarios/staticfiles/templates/html/app/list-lotes.html
@@ -51,7 +51,7 @@
         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenteredScrollableTitle">Finca</h5>
+                    <h5 class="modal-title" id="exampleModalCenteredScrollableTitle">Lote</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
