--- a/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
@@ -144,7 +144,7 @@
         
         fetch(`/salidas/retrieve/${userId}`, {
             method: 'DELETE',
-            headers: {
+            headers: {'X-CSRFToken': getCookie('csrftoken'),
                 'Authorization': `Bearer ${accessToken}`
             }
         })
@@ -154,7 +154,7 @@
                     row.remove();
                     showAlertInModal('Salida han sido eliminada exitosamente.');
                 } else {
-                    showAlertInModal('Hubo un error al eliminar el usuario.');
+                    showAlertInModal('Hubo un error al eliminar la salida.');
                 }
             })
             .catch(error => {
