--- a/inventarios/inventarios/staticfiles/templates/html/app/add-usuario.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-usuario.html
@@ -211,6 +211,8 @@
         {% endif %}
         email: document.getElementById('email').value,
         groups: groups,
+        first_name: document.getElementById('nombres').value,
+        last_name: document.getElementById('apellidos').value,
         
         info_user: {
             telefono: document.getElementById('telefono').value,
