--- a/inventarios/staticfiles/templates/html/app/add-unidad.html
+++ b/inventarios/staticfiles/templates/html/app/add-unidad.html
@@ -20,6 +20,15 @@
                                 placeholder="Ingrese el Nombre de la unidad de medida" required>
                             <div class="help-block with-errors"></div>
                         </div>
+                
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Unidad de medida*</label>
+                            <input type="text" id="Unidad" name="Unidad" class="form-control"
+                                placeholder="Ingrese el Nombre de la unidad de medida" maxlength="4" required>
+                            <div class="help-block with-errors"></div>
+                        </div>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary mr-2">
@@ -107,6 +116,7 @@
 
         const formData = {
             nombre: document.getElementById('nombreUnidad').value,
+            unidad: document.getElementById('Unidad').value,
             // ... otros campos si los tienes
         };
 
