Revert "Fix(usuarios y unidades)"
This reverts commit 866ebd79bb7d37ce9414954037d76b89d9a6c79e.

--- a/inventarios/staticfiles/templates/html/app/list-usuarios.html
+++ b/inventarios/staticfiles/templates/html/app/list-usuarios.html
@@ -86,8 +86,8 @@
 
                 // Crear y agregar cada columna (td) al row
                 row.innerHTML = `
-        <td>${user.usuario.nombre}</td>
-        <td>${user.usuario.apellido}</td>
+        <td>${user.usuario.fist_name}</td>
+        <td>${user.usuario.last_name}</td>
         <td>${user.usuario.email}</td>
         <td>${user.telefono}</td>
         <td>${user.usuario.groups.join(', ') || 'Ninguno'}</td>
